testdata/golden/sema/invalid/ret_block_trivial_recursion.sg
fn loop(x: int) -> int {
    return {
        ret loop(x);
    };
}
